# monorepo

./: .bazelrc  .gitignore  .gitmodules  BUILD  README.md  WORKSPACE  package.json  tsconfig.json
.github/workflows/: main.yaml
bookmarker/: BUILD
bookmarker/client/src/: App.tsx  BUILD  index.html
bookmarker/client/src/components/: BUILD  Bookmarks.tsx  Warning.tsx
bookmarker/client/src/lib/: BUILD  request.ts
bookmarker/server/: README.md
bookmarker/server/src/main/java/me/a6n/bookmarker/: BUILD
bookmarker/server/src/main/java/me/a6n/bookmarker/bookmarks/: Bookmark.java  BookmarkRepository.java
bookmarker/server/src/main/java/me/a6n/bookmarker/micronaut/: BookmarkExtractor.java  BookmarksController.java
bookmarker/server/src/main/resources/: BUILD  application.yml  data.sql  logback.xml
bookmarker/server/src/test/java/me/a6n/bookmarker/bookmarks/: BUILD  BookmarkRepositoryTest.java
bookmarker/server/src/test/java/me/a6n/bookmarker/micronaut/: AppTest.java  BUILD
goplayground/: BUILD.bazel  go.mod
scalaplayground/src/main/scala/me/a6n/scalaplayground/: App.scala  BUILD
tools/: Dockerfile  external_rules.bzl
tools/java/: BUILD  junit5.bzl  maven.bzl  maven_install.json
