load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "goplayground_lib",
    srcs = ["main.go"],
    importpath = "github.com/lackerman/goplayground",
    visibility = ["//visibility:private"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_binary(
    name = "goplayground",
    embed = [":goplayground_lib"],
    visibility = ["//visibility:public"],
)
